yoshimi 1.4.x

2016-8-12 Will
* Inproved direct access to filters - Only dynfilter to do now!.
* Updated docs.

2016-8-11 Will
* Bugfix: CLI wasn't loading upper set instruments (128+).
* Tidied up NRPN vector control.
* Added more error messages to 'non fatal' category.
* Implemented most of the direct access for filters.
* Updated docs.

2016-8-10 Will
* Implemented simple internal text messaging system.
* Added autoload state to CLI and NRPNs.
* Added instrument load time to CLI and NRPNs.
* Updated docs.

2016-8-9 Will
* Slow program load no longer freezes GUI
* Bugfix: Very obscure! Made some program load ops fail if number was
  less than 4 digits and there was a space in the name where the first
  character would otherwise be.
* Updated LV2 for new MiscGui files.

2016-8-8 Will
* Defined direct commands for 'set default' and 'MIDI learn'.
* Activated CLI ID.
* Updated docs.

2016-8-7 Will
* Created src/UI/MiscGui.h to become only link between synth & GUI.
* Bugfix: Effects 'home' on right click had failed.
* Bugfix: AddSynth resonance wasn't showing on GUI button 2.

2016-8-6 Will
* Started actual direct control of filters.
* Added root and bank load times but in uS!
* minor doc updates.

2016-8-4 Will
* Bugfix: At startup all enabled parts were registering direct O/P
  when not actualy directed to part/both.
* Load time reporting now has its own switch.
* Added 'Switches' tab to Config window and moved them from 'Main'.

2016-8-4 Will
* Added load time (mS) to instrument load message.
* New feature: Auto-load default state.

2016-8-2 Will
* Applied gentoo build patches.
  (doesn't seem to make any difference to other distros)

2016-7-31 Will
* Updated docs - no code changes.

2016-7-30 Will
* Optimised parameter handling in direct access.
* Updated docs.

2016-7-28 Will
* Implimented direct access to effect inserts, but not the actual filter
  (sub) insert in dynfilter.
* Added 'Effect_Inserts' file to dev_notes.
* Updated other direct access docs.
